@@ -55,13 +55,13 @@ Bug and Issue tracker.
 
 Compiling Flume requires the following tools:
 
-* Oracle Java JDK 1.7
+* Oracle Java JDK 1.8
 * Apache Maven 3.x
 
 Note: The Apache Flume build requires more memory than the default configuration.
 We recommend you set the following Maven options:
 
-export MAVEN_OPTS="-Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m"
+`export MAVEN_OPTS="-Xms512m -Xmx1024m"`
 
 To compile Flume and build a distribution tarball, run `mvn install` from the
 top level directory. The artifacts will be placed under `flume-ng-dist/target/`.
